Added PMD to check for trouble spots in the code base.  Fixed numerous errors from the PMD rulesets used.
git-svn-id: svn://svn.code.sf.net/p/openfast/code/trunk@51 e6ee02d6-d133-0410-bd08-f9337e8129a4